Fixed page height on mobile?

--- a/src/app.css
+++ b/src/app.css
@@ -47,7 +47,7 @@
 }
 
 body {
-  height: 100vh;
+  height: 100svh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
